--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@quasar/cli": "^1.4.0",
     "@quasar/extras": "^1.16.9",
     "apexcharts": "^3.45.2",
